; ModuleID = '/home/carl/AnghaBench/citus/src/backend/distributed/utils/extr_listutils.c_DatumArrayToArrayType.c'
source_filename = "/home/carl/AnghaBench/citus/src/backend/distributed/utils/extr_listutils.c_DatumArrayToArrayType.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @DatumArrayToArrayType(i32* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i8, align 1
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  store i32* null, i32** %7, align 8
  store i32 0, i32* %8, align 4
  store i32 0, i32* %9, align 4
  store i8 0, i8* %10, align 1
  %11 = load i32, i32* %6, align 4
  %12 = call i32 @get_typlenbyvalalign(i32 %11, i32* %8, i32* %9, i8* %10)
  %13 = load i32*, i32** %4, align 8
  %14 = load i32, i32* %5, align 4
  %15 = load i32, i32* %6, align 4
  %16 = load i32, i32* %8, align 4
  %17 = load i32, i32* %9, align 4
  %18 = load i8, i8* %10, align 1
  %19 = call i32* @construct_array(i32* %13, i32 %14, i32 %15, i32 %16, i32 %17, i8 signext %18)
  store i32* %19, i32** %7, align 8
  %20 = load i32*, i32** %7, align 8
  ret i32* %20
}

declare dso_local i32 @get_typlenbyvalalign(i32, i32*, i32*, i8*) #1

declare dso_local i32* @construct_array(i32*, i32, i32, i32, i32, i8 signext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
